--- a/src/Makefile.tools.in
+++ b/src/Makefile.tools.in
@@ -66,9 +66,9 @@ HOST_COMPILER = $(HOST_TOOLCHAIN)
 HOST_RUNTIME = '$(MIT_SCHEME_EXE)' --batch-mode --band runtime.com
 HOST_SYNTAXER = '$(MIT_SCHEME_EXE)' --batch-mode --band runtime.com \
 	--eval '(load-option (quote CREF))' \
-	--eval '(load-option (quote SF))'
+	--eval '(load-option (quote SF))' --load tools/patch
 HOST_TOOLCHAIN = '$(MIT_SCHEME_EXE)' --batch-mode \
-	--eval '(load-option (quote CREF))'
+	--eval '(load-option (quote CREF))' --load tools/patch
 
 # XXX Temporary kludge until we get 9.2 out.  Replace by HOST_RUNTIME.
 KLUDGEROUS_RUNTIME = ((echo '(cd "..")' && cat) | (cd runtime && \
