--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -103,10 +103,15 @@ TOOL_COMPILER_SETTINGS = \
 	$(COMPILER_SETTINGS_CROSS) \
 	$(COMPILER_SETTINGS_LIARC)
 
+GLOBAL_DEFINITIONS_DIRECTORY = \
+  --eval '(set! cref/global-definitions-directory "'"`pwd`"'")'
+
 HOST_SCHEME = '$(MIT_SCHEME_EXE)' --batch-mode
 TOOL_COMPILER = $(TOOL_TOOLCHAIN)
-TOOL_SYNTAXER = $(HOST_SCHEME) --band ./tools/syntaxer.com
+TOOL_SYNTAXER = $(HOST_SCHEME) --band ./tools/syntaxer.com \
+  $(GLOBAL_DEFINITIONS_DIRECTORY)
 TOOL_TOOLCHAIN = $(HOST_SCHEME) --band ./tools/compiler.com \
+  $(GLOBAL_DEFINITIONS_DIRECTORY) \
   --eval '(begin $(TOOL_COMPILER_SETTINGS))'
 
 .PHONY: toolchain
