--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -105,8 +105,8 @@ TOOL_COMPILER_SETTINGS = \
 
 HOST_SCHEME = '$(MIT_SCHEME_EXE)' --batch-mode
 TOOL_COMPILER = $(TOOL_TOOLCHAIN)
-TOOL_SYNTAXER = $(HOST_SCHEME) --library ./lib --band ./tools/syntaxer.com
-TOOL_TOOLCHAIN = $(HOST_SCHEME) --library ./lib --band ./tools/compiler.com \
+TOOL_SYNTAXER = $(HOST_SCHEME) --band ./tools/syntaxer.com
+TOOL_TOOLCHAIN = $(HOST_SCHEME) --band ./tools/compiler.com \
   --eval '(begin $(TOOL_COMPILER_SETTINGS))'
 
 .PHONY: toolchain
